Improved Minecraft page

--- a/minecraft.html
+++ b/minecraft.html
@@ -97,78 +97,43 @@
         </nav>
     </header>
     <main class="mcFont">
-        <div class="containerCenterer">
-            <div class="constructionBox">
-                <div>
-                    <h1 class="mcFont">Minecraft</h1>
-                    <div class="centererWrapper">
-                        <div class="titleUnderText">
-                            <p class="mcFont subTitle">Want to play on a Minecraft server where everyone treats everyone
-                                with respect, where everyone helps each other and run a simple survival server without
-                                too many mods? Look no further! Come join us! The server is ran on Java, but we have a
-                                plugin that lets Bedrock players join too!</p>
-                            <p class="mcFont subTitle">(you need to wait for an admin or the owner to join in order to
-                                grant you permissions to
-                                build and similar)</p>
-                        </div>
-                        <div id="wrapperMc">
-                            <div id="anotherWrapper">
-                                <!-- Dexrn: prob rename this I was too lazy to come up with a name for it lmao -->
-                                <img class="imgWorld" draggable="false" src="/src/images/mc/world.png"
-                                    alt="A screenshot of the Minecraft world">
-                                <div class="img-holder">
-                                    <a rel="noopener" class="button green mcFont link mcMapButton" href="http://mc.aridan.net:8172"
-                                        target="_blank">Explore
-                                        the map →</a>
-                                </div>
-                            </div>
-                            <div id="mcJoinButtons">
-                                <button id="javaButton" class="mc mcMenu mcFont green" onclick="showJava()">Java</button>
-                                <button id="bedrockButton" class="mc mcMenu mcFont green"
-                                    onclick="showBedrock()">Bedrock</button>
-                            </div>
-
-                            <div id="java" class="hide">
-                                <p class="mcFont">To join on Java, use this:
-                                    Address: mc.aridan.net
-                                </p>
-                            </div>
-                            <div id="bedrock" class="hide">
-                                <p class="mcFont">
-                                    To join on Bedrock, use this:
-                                    Address: mc.aridan.net
-                                    Port: 25609
-                                </p>
-                            </div>
-
-                        </div>
-                        <div>
-                            <div id="admins">
-
-                            </div>
-                            <p class="mcFont">Downloads</p>
-                            <div id="downloads">
-                                <a class="button dark mcFont"
-                                    href="https://drive.google.com/file/d/101hYoVd5bSLjk3MSjTkL8ziZ4Qn1o066/view?usp=sharing">
-                                    Download the aridan.net Modpack
-                                </a>
-                                <a class="button dark mcFont" href="/src/downloads/SwedenTweaks.zip"
-                                    download="SwedenTweaks.zip">
-                                    Download the aridan.net Resource pack
-                                </a>
-                            </div>
-                        </div>
-                        <p class="mcFont subTitle">(don't worry, your computer will download this when you enter the
-                            server, this is just if you want to use it on your own worlds)</p>
+        <h1 class="mcFont">Minecraft</h1>
+        <div>
+            <div class="centererWrapper">
+                <section class="titleUnderText">
+                    <p class="mcFont subTitle">Want to play on a Minecraft server where everyone treats everyone
+                        with respect, where everyone helps each other and run a simple survival server without
+                        too many mods? Look no further! Come join us! The server is ran on Java, but we have a
+                        plugin that lets Bedrock players join too!</p>
+                    <p class="mcFont subTitle">(you need to wait for an admin or the owner to join in order to
+                        grant you permissions to
+                        build and similar)</p>
+                </section>
+                <section>
+                    <div id="admins">
                     </div>
-                </div>
+                    <p class="mcFont">Downloads</p>
+                    <div id="downloads">
+                        <a class="button dark mcFont"
+                            href="https://drive.google.com/file/d/101hYoVd5bSLjk3MSjTkL8ziZ4Qn1o066/view?usp=sharing">
+                            Download the aridan.net Modpack
+                        </a>
+                        <a class="button dark mcFont" href="/src/downloads/SwedenTweaks.zip"
+                            download="SwedenTweaks.zip">
+                            Download the aridan.net Resource pack
+                        </a>
+                    </div>
+                </section>
+                <p class="mcFont subTitle">(don't worry, your computer will download this when you enter the
+                    server, this is just if you want to use it on your own worlds)</p>
             </div>
         </div>
     </main>
     <footer>
         <div class="footer">
             <p class="mcFont">Font and background image are
-                from <a class="mcFont" href="https://faithfulpack.net/">Faithful</a>.<br>© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT
+                from <a class="mcFont" href="https://faithfulpack.net/">Faithful</a>.<br>© Copyright 2024 by Adnan
+                Bukvic unless stated otherwise. This project uses the MIT
                 license. <br>Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0. </p>
         </div>
     </footer>
