--- a/minecraft.html
+++ b/minecraft.html
@@ -109,6 +109,32 @@
                         grant you permissions to
                         build and similar)</p>
                 </section>
+                <section class="project">
+                    <p class="projectName mcFont">Join the server</p>
+                    <p class="projectDesc mcFont">Please be aware that you need to follow these rules in order to be permitted
+                        on the server:</p>
+                    <div>
+                        <p class="projectLegal mcFont"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/judge.svg"><br> No one under 13 years old</p>
+                        <p class="projectLegal mcFont"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/judge.svg"><br> No griefing or stealing</p>
+                        <p class="projectLegal mcFont"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/judge.svg"><br> Be kind to others</p>
+                        <p class="projectLegal mcFont"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/judge.svg"><br> Don't hurt the villagers, iron golems or damage
+                            the houses at spawn</p>
+                        <p class="projectLegal mcFont"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/judge.svg"><br> No nuking the server</p>
+                        <p class="projectLegal mcFont"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/judge.svg"><br> Don't use hacked clients or x-ray tools</p>
+                    </div>
+                    <div>
+                        <p class="projectLegal mcFont">Server Name: aridanMC</p>
+                        <p class="projectLegal mcFont">Server Address: mc.aridan.net</p>
+                        <p class="projectLegal mcFont">Port (if on Bedrock): 25609</p>
+                        <p class="projectLegal mcFont">Server Resource Packs: Enabled</p>
+                    </div>
+                </section>
                 <section>
                     <div id="admins">
                     </div>
@@ -124,7 +150,8 @@
                         </a>
                     </div>
                 </section>
-                <p class="mcFont subTitle">(don't worry, your computer will download this when you enter the
+                <p class="mcFont subTitle">(don't worry, your computer will download the resource pack when you enter
+                    the
                     server, this is just if you want to use it on your own worlds)</p>
             </div>
         </div>
