Added placeholder images

--- a/index.html
+++ b/index.html
@@ -162,15 +162,15 @@
                                 <div id="discordInfo" class="discordInfo">
                                     <p id="discordName">actuallyaridan</p>
                                     <img id="discordPFP" class="discordPFP" draggable="false" width="128px"
-                                        height="128px" alt="">
+                                        height="128px" alt="" src="src/images/icons/spinner.gif">
                                 </div>
                                 <hr width="100%" class="divider">
                                 <div id="discordActivity">
                                     <div id="discordActivityImages">
                                         <img id="activityLogoLarge" draggable="false" width="96px" height="96px" alt=""
-                                            src="">
+                                            src="src/images/icons/spinner.gif">
                                         <img id="activityLogoSmall" draggable="false" width="32px" height="32px" alt=""
-                                            src="">
+                                            src="src/images/icons/spinner.gif">
                                     </div>
                                     <div id="discordActivityInfo">
                                         <h3 id="activityName"></h3>
