Improved mobile menu

--- a/experiences.html
+++ b/experiences.html
@@ -52,17 +52,16 @@
                             src="/src/images/emojis/setttings.svg"> Settings</a>
                 </li>
             </menu>
-            <div class="navWrapperMobile">
-                <button onclick="toggleMenu()" type="button" class="navButton">
+            <menu class="navWrapperMobile">
+                <li>
+                    <a class="navButton" href="/">aridan.net</a>
+                </li>
+                <button onclick="toggleMenu()" type="button" class="navButton right-link">
                     <img draggable="false" class="emoji" alt="" src="/src/images/icons/menu.svg">
                     Menu
                 </button>
-            </div>
+            </menu>
             <menu class="mobileMenu" id="mobileMenuID">
-                <li>
-                    <a class="navButton" href="/"><img draggable="false" class="emoji" alt=""
-                            src="/src/images/emojis/house.svg"> Home</a>
-                </li>
                 <li>
                     <a class="navButton activeChoice" href="experiences"><img draggable="false" class="emoji" alt=""
                             src="/src/images/emojis/brain.svg"> Experiences</a>
