--- a/index.html
+++ b/index.html
@@ -61,17 +61,16 @@
                             src="/src/images/emojis/setttings.svg"> Settings</a>
                 </li>
             </menu>
-            <div class="navWrapperMobile">
-                <button onclick="toggleMenu()" type="button" class="navButton">
+            <menu class="navWrapperMobile">
+                <li>
+                    <a class="navButton activeChoice" href="/">aridan.net</a>
+                </li>
+                <button onclick="toggleMenu()" type="button" class="navButton right-link">
                     <img draggable="false" class="emoji" alt="" src="/src/images/icons/menu.svg">
                     Menu
                 </button>
-            </div>
+            </menu>
             <menu class="mobileMenu" id="mobileMenuID">
-                <li>
-                    <a class="navButton activeChoice" href="/"><img draggable="false" class="emoji" alt=""
-                            src="/src/images/emojis/house.svg"> Home</a>
-                </li>
                 <li>
                     <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
                             src="/src/images/emojis/brain.svg"> Experiences</a>
@@ -195,4 +194,5 @@
         <p>Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0.</p>
     </footer>
 </body>
+
 </html>
