--- a/sv/projects.html
+++ b/sv/projects.html
@@ -49,17 +49,16 @@
                             src="/src/images/emojis/setttings.svg"> Inställningar</a>
                 </li>
             </menu>
-            <div class="navWrapperMobile">
-                <button onclick="toggleMenu()" type="button" class="navButton">
-                    <img draggable="false" class="emoji" alt="" src="/src/images/icons/menu.svg">
-                    Menu
-                </button>
-            </div>
-            <menu class="mobileMenu" id="mobileMenuID">
+            <menu class="navWrapperMobile">
                 <li>
-                    <a class="navButton" href="/sv/"><img draggable="false" class="emoji" alt=""
-                            src="/src/images/emojis/house.svg"> Hem</a>
+                    <a class="navButton" href="/sv/">aridan.net</a>
                 </li>
+                <button onclick="toggleMenu()" type="button" class="navButton right-link">
+                    <img draggable="false" class="emoji" alt="" src="/src/images/icons/menu.svg">
+                    Meny
+                </button>
+            </menu>
+            <menu class="mobileMenu" id="mobileMenuID">
                 <li>
                     <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
                             src="/src/images/emojis/brain.svg"> Erfarenhet</a>
