--- a/experiences.html
+++ b/experiences.html
@@ -56,10 +56,12 @@
                 <li>
                     <a class="navButton" href="/">aridan.net</a>
                 </li>
-                <button onclick="toggleMenu()" type="button" class="navButton right-link">
-                    <img draggable="false" class="emoji" alt="" src="/src/images/icons/menu.svg">
-                    Menu
-                </button>
+                <li>
+                    <button onclick="toggleMenu()" type="button" class="navButton right-link">
+                        <img draggable="false" class="emoji" alt="" src="/src/images/icons/menu.svg">
+                        Menu
+                    </button>
+                </li>
             </menu>
             <menu class="mobileMenu" id="mobileMenuID">
                 <li>
@@ -107,8 +109,8 @@
                 </section>
                 <p class="subTitleExp">Work Experience</p>
                 <section class="project">
-                    <p class="projectName">Salesperson, technician and lead web developer at IT Care
-                        Repairstore</p>
+                   <h2 class="projectName">Salesperson, technician and lead web developer at IT Care
+                        Repairstore</h2>
                     <p class="projectDesc">This was my first job. I learned a lot during it and I
                         can
                         honestly say it thought me a lot of life lessons that I needed to learn. I
@@ -129,7 +131,7 @@
                 </section>
                 <p class="subTitleExp">Education</p>
                 <section class="project">
-                    <p class="projectName">Networking and computer science student at Teknikum </p>
+                   <h2 class="projectName">Networking and computer science student at Teknikum </h2>
                     <p class="projectDesc">During my time at Teknikum, I got to learn the basics of
                         networking in regard to routing and switching. I also got to learn how to
                         build computers, use virtual machines, manage servers that run on Windows
