--- a/index.html
+++ b/index.html
@@ -65,10 +65,12 @@
                 <li>
                     <a class="navButton activeChoice" href="/">aridan.net</a>
                 </li>
-                <button onclick="toggleMenu()" type="button" class="navButton right-link">
-                    <img draggable="false" class="emoji" alt="" src="/src/images/icons/menu.svg">
-                    Menu
-                </button>
+                <li>
+                    <button onclick="toggleMenu()" type="button" class="navButton right-link">
+                        <img draggable="false" class="emoji" alt="" src="/src/images/icons/menu.svg">
+                        Menu
+                    </button>
+                </li>
             </menu>
             <menu class="mobileMenu" id="mobileMenuID">
                 <li>
@@ -106,7 +108,7 @@
                 </section>
                 <p class="subTitleExp">About me</p>
                 <section class="project" id="bio">
-                    <p class="projectName">Adnan Bukvic, also known as @actuallyaridan</p>
+                   <h2 class="projectName">Adnan Bukvic, also known as @actuallyaridan</h2>
                     <p class="projectDesc">I'm a creative guy that loves making new solutions to old
                         things. I love learning new things and I've liked computers, phones and
                         networking ever since I was a child. I'm always up-to-date about their software
@@ -123,7 +125,7 @@
                     </div>
                 </section>
                 <section class="project" id="tech">
-                    <p class="projectName">Technology</p>
+                   <h2 class="projectName">Technology</h2>
                     <p class="projectDesc">I own a bunch of different tech. Here are my most important ones:</p>
                     <div class="projectStuff">
                         <p class="projectStatus"><img draggable="false" class="emoji" alt=""
@@ -141,7 +143,7 @@
                 </section>
                 <section class="project" id="currentdiscord">
                     <span id="dcNameContainer">
-                        <p class="projectName" id="dcActivityHeaderName">Discord activity</p>
+                       <h2 class="projectName" id="dcActivityHeaderName">Discord activity</h2>
                         <p id="statusWrapper" class="dcloading">Loading</p>
                     </span>
                     <div id="landyardDiscord">
