--- a/projects.html
+++ b/projects.html
@@ -54,10 +54,12 @@
                 <li>
                     <a class="navButton" href="/">aridan.net</a>
                 </li>
-                <button onclick="toggleMenu()" type="button" class="navButton right-link">
-                    <img draggable="false" class="emoji" alt="" src="/src/images/icons/menu.svg">
-                    Menu
-                </button>
+                <li>
+                    <button onclick="toggleMenu()" type="button" class="navButton right-link">
+                        <img draggable="false" class="emoji" alt="" src="/src/images/icons/menu.svg">
+                        Menu
+                    </button>
+                </li>
             </menu>
             <menu class="mobileMenu" id="mobileMenuID">
                 <li>
@@ -95,7 +97,7 @@
                     </p>
                 </section>
                 <section class="project">
-                    <p class="projectName">This website (aridan.net)</p>
+                    <h2 class="projectName">This website (aridan.net)</h2>
                     <p class="projectDesc">This is a website that has all my social media links, all my
                         experiences and similar listed. I learned a lot during this project, mainly how
                         to make websites look nice.</p>
@@ -114,7 +116,7 @@
                     </div>
                 </section>
                 <section class="project">
-                    <p class="projectName">Swedish translation of OldTwitter</p>
+                   <h2 class="projectName">Swedish translation of OldTwitter</h2>
                     <p class="projectDesc">OldTwitter is a Firefox and Chrome extension to make X (formerly Twitter)
                         look and feel like Twitter from 2015/2018. I actively translate the extension to Swedish,
                         and I believe I'm doing a pretty decent job! You should check it out!</p>
@@ -132,7 +134,7 @@
                     </div>
                 </section>
                 <section class="project">
-                    <p class="projectName">Various iPods</p>
+                   <h2 class="projectName">Various iPods</h2>
                     <p class="projectDesc">I have modified numerous iPods. Some even with transparent click wheels
                         and
                         buttons along with transparent faceplates. I've also installed a larger batteries
@@ -144,7 +146,7 @@
                     </div>
                 </section>
                 <section class="project">
-                    <p class="projectName">Hackintoshing a PC</p>
+                   <h2 class="projectName">Hackintoshing a PC</h2>
                     <p class="projectDesc">Hackintoshing is the act of installing macOS on non-Apple
                         hardware. I did this as a hobby project and I learned a lot about Apple
                         software. It was a fun project and it still works to this day!</p>
