--- a/sv/index.html
+++ b/sv/index.html
@@ -51,10 +51,12 @@
                 <li>
                     <a class="navButton activeChoice" href="/sv/">aridan.net</a>
                 </li>
-                <button onclick="toggleMenu()" type="button" class="navButton right-link">
-                    <img draggable="false" class="emoji" alt="" src="/src/images/icons/menu.svg">
-                    Meny
-                </button>
+                <li>
+                    <button onclick="toggleMenu()" type="button" class="navButton right-link">
+                        <img draggable="false" class="emoji" alt="" src="/src/images/icons/menu.svg">
+                        Meny
+                    </button>
+                </li>
             </menu>
             <menu class="mobileMenu" id="mobileMenuID">
                 <li>
@@ -90,7 +92,7 @@
                 <p class="subTitleExp">Om mig
                 </p>
                 <section class="project">
-                    <p class="projectName">Adnan Bukvic, även känd som @actuallyaridan</p>
+                   <h2 class="projectName">Adnan Bukvic, även känd som @actuallyaridan</h2>
                     <p class="projectDesc">Jag är en kreativ kille som älskar att skapa nya lösningar för
                         gamla saker. Jag älskar att lära mig nya saker och jag har gillat datorer, telefoner
                         och nätverk ända sedan jag var ett barn.Jag är alltid uppdaterad om deras mjukvara
@@ -109,7 +111,7 @@
                 </section>
                 <section class="project">
                     <span id="dcNameContainer">
-                        <p class="projectName" id="dcActivityHeaderName">Discord-aktivitet</p>
+                       <h2 class="projectName" id="dcActivityHeaderName">Discord-aktivitet</h2>
                         <p id="statusWrapper" class="dcloading">Laddar</p>
                     </span>
                     <div id="landyardDiscord">
