--- a/sv/projects.html
+++ b/sv/projects.html
@@ -53,10 +53,12 @@
                 <li>
                     <a class="navButton" href="/sv/">aridan.net</a>
                 </li>
-                <button onclick="toggleMenu()" type="button" class="navButton right-link">
-                    <img draggable="false" class="emoji" alt="" src="/src/images/icons/menu.svg">
-                    Meny
-                </button>
+                <li>
+                    <button onclick="toggleMenu()" type="button" class="navButton right-link">
+                        <img draggable="false" class="emoji" alt="" src="/src/images/icons/menu.svg">
+                        Meny
+                    </button>
+                </li>
             </menu>
             <menu class="mobileMenu" id="mobileMenuID">
                 <li>
@@ -94,7 +96,7 @@
                     </p>
                 </section>
                 <section class="project">
-                    <p class="projectName">Den där webbsidan (aridan.net)</p>
+                   <h2 class="projectName">Den där webbsidan (aridan.net)</h2>
                     <p class="projectDesc">Denna webbsidan innehåller alla mina länkar till mina konton
                         på sociala medier och liknande samt min arbetslivserfarenhet. Jag lär mig
                         ständigt nya saker genom denna webbsida, men mestadels hur man kan få webbsidor
@@ -115,7 +117,7 @@
                     </div>
                 </section>
                 <section class="project">
-                    <p class="projectName">Den svenska översättningen av OldTwitter</p>
+                   <h2 class="projectName">Den svenska översättningen av OldTwitter</h2>
                     <p class="projectDesc">OldTwitter är ett tillägg för Chrome och Firefox som gör så
                         att X (tidigare Twitter) ser ut som Twitter från 2016/2018. Jag behöver aktivt
                         översätta tillägget till svenska och själv tycker jag att jag gör ett ganska bra
@@ -135,11 +137,11 @@
                     </div>
                 </section>
                 <section class="project">
-                    <p class="projectName">Diverse iPods</p>
+                   <h2 class="projectName">Diverse iPods</h2>
                     <p class="projectDesc">Jag gillar att modifiera äldre iPods. På vissa iPod har jag
                         lagt en genomskinlig framsida samt klickhjul på.Dessutom så byter jag ut
                         batteriet på dem mot en större variant och byter ut hårddiskarna med ett SD
-                        kort.</p>
+                        kort.</h2>
                     <div>
                         <p class="projectStatus completed">Färdigt</p>
                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
@@ -147,7 +149,7 @@
                     </div>
                 </section>
                 <section class="project">
-                    <p class="projectName">"Hackintoshing"</p>
+                   <h2 class="projectName">"Hackintoshing"</h2>
                     <p class="projectDesc">"Hackintoshing" är att installera macOS på icke-Apple
                         hårdvara. Detta gjorde jag som ett hobbyprojekt, men samtidigt så lärde jag
                         lärde mig massor om hur Apples klientoperativsystem fungerar. Det var superkul,
