--- a/sv/experiences.html
+++ b/sv/experiences.html
@@ -50,10 +50,12 @@
                 <li>
                     <a class="navButton" href="/sv/">aridan.net</a>
                 </li>
-                <button onclick="toggleMenu()" type="button" class="navButton right-link">
-                    <img draggable="false" class="emoji" alt="" src="/src/images/icons/menu.svg">
-                    Meny
-                </button>
+                <li>
+                    <button onclick="toggleMenu()" type="button" class="navButton right-link">
+                        <img draggable="false" class="emoji" alt="" src="/src/images/icons/menu.svg">
+                        Meny
+                    </button>
+                </li>
             </menu>
             <menu class="mobileMenu" id="mobileMenuID">
                 <li>
@@ -96,7 +98,7 @@
                 </section>
                 <p class="subTitleExp">Arbetslivserfarenhet</p>
                 <section class="project">
-                    <p class="projectName">Säljare, tekniker och webbutvecklare på IT Care Repairstore</p>
+                   <h2 class="projectName">Säljare, tekniker och webbutvecklare på IT Care Repairstore</h2>
                     <p class="projectDesc">Det här var mitt första jobb. Jag lärde mig mycket under det och
                         jag kan ärligt säga att det lärde mig många livsläxor som jag behövde lära mig.
                         Jag lärde mig hur man kommunicerar och arbetar som ett team, hur man professionellt
@@ -116,7 +118,7 @@
 
                 <p class="subTitleExp">Utbildning</p>
                 <section class="project">
-                    <p class="projectName">Dator- och kommunikationsteknikselev på Teknikum </p>
+                   <h2 class="projectName">Dator- och kommunikationsteknikselev på Teknikum </h2>
                     <p class="projectDesc">Under min tid på Teknikum fick jag lära mig grunderna inom
                         nätverkande när det gäller routing och switching.
                         Jag fick också lära mig att bygga datorer, använda virtuella datorer, hantera
