Fixed validation issues

--- a/sv/index.html
+++ b/sv/index.html
@@ -130,20 +130,20 @@
                             <div id="discord">
                                 <div id="discordInfo" class="discordInfo">
                                     <p id="discordName">actuallyaridan</p>
-                                    <img id="discordPFP" class="discordPFP" draggable="false" width="128px"
-                                        height="128px" alt="" src="/src/images/icons/spinner.gif">
+                                    <img id="discordPFP" class="discordPFP" draggable="false" width="128"
+                                        height="128" alt="" src="/src/images/icons/spinner.gif">
                                 </div>
-                                <hr width="100%" class="divider">
+                                <hr class="divider">
                                 <div id="discordActivity">
                                     <div id="discordActivityImages">
-                                        <img id="activityLogoLarge" draggable="false" width="96px" height="96px" alt="" src="/src/images/icons/spinner.gif">
-                                        <img id="activityLogoSmall" draggable="false" width="32px" height="32px" alt="" src="/src/images/icons/spinner.gif">
+                                        <img id="activityLogoLarge" draggable="false" width="96" height="96" alt="" src="/src/images/icons/spinner.gif">
+                                        <img id="activityLogoSmall" draggable="false" width="32" height="32" alt="" src="/src/images/icons/spinner.gif">
                                     </div>
                                     <div id="discordActivityInfo">
-                                        <h3 id="activityName"></h3>
-                                        <p id="activityDetails"></p>
-                                        <p id="activityState" class="subTitle"></p>
-                                        <p id="activityTime" class="subTitle"></p>
+                                        <h3 id="activityName">Laddar</h3>
+                                        <p id="activityDetails">Laddar</p>
+                                        <p id="activityState" class="subTitle">Laddar</p>
+                                        <p id="activityTime" class="subTitle">Laddar</p>
                                     </div>
                                 </div>
                             </div>
