Removed all validation errors

--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
                     </div>
                 </section>
                 <section class="project" id="currentdiscord">
-                    <span id="dcNameContainer">
+                    <aside id="dcNameContainer">
                        <h2 class="projectName" id="dcActivityHeaderName">Discord activity</h2>
                         <p id="statusWrapper" class="dcloading">Loading</p>
-                    </span>
+                    </aside>
                     <div id="landyardDiscord">
                         <div id="loading">
                             <div>
