--- a/index.html
+++ b/index.html
@@ -177,7 +177,11 @@
                                         <h3 id="activityName">Loading</h3>
                                         <p id="activityDetails">Loading</p>
                                         <p id="activityState" class="subTitle">Loading</p>
-                                        <p id="activityTime" class="subTitle">Loading</p>
+                                        <div id="timeremaning">
+                                            <p id="activityTime" class="subTitle">00:00</p>
+                                            <p id="remaining" class="hide subTitle"> remaining</p>
+                                            <p id="elapsed" class="hide subTitle"> elapsed</p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
