--- a/sv/index.html
+++ b/sv/index.html
@@ -143,7 +143,11 @@
                                         <h3 id="activityName">Laddar</h3>
                                         <p id="activityDetails">Laddar</p>
                                         <p id="activityState" class="subTitle">Laddar</p>
-                                        <p id="activityTime" class="subTitle">Laddar</p>
+                                        <div id="timeremaning">
+                                            <p id="activityTime" class="subTitle">00:00</p>
+                                            <p id="remaining" class="hide subTitle"> återstår</p>
+                                            <p id="elapsed" class="hide subTitle"> förflutet</p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
