--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                         <div id="loadedLandyard">
                             <div id="discord">
                                 <div id="discordInfo" class="discordInfo">
-                                    <p id="discordName">actuallyaridan</p>
+                                    <p id="discordName">Loading</p>
                                     <img id="discordPFP" class="discordPFP" draggable="false" width="128"
                                         height="128" alt="" src="src/images/icons/spinner.gif">
                                 </div>
