--- a/index.html
+++ b/index.html
@@ -109,11 +109,7 @@
                 <p class="subTitleExp">About me</p>
                 <section class="project" id="bio">
                    <h2 class="projectName">Adnan Bukvic, also known as @actuallyaridan</h2>
-                    <p class="projectDesc">I'm a creative guy that loves making new solutions to old
-                        things. I love learning new things and I've liked computers, phones and
-                        networking ever since I was a child. I'm always up-to-date about their software
-                        and hardware. I even like modifying electronics to do new things, like old
-                        cables and accessories like iPods and I know a bunch of languages too!</p>
+                    <p class="projectDesc">Test</p>
                     <div class="projectStuff">
                         <p class="projectStatus"><img draggable="false" class="emoji" alt=""
                                 src="/src/images/emojis/clock.svg"><br>19 years old</p>
