--- a/index.html
+++ b/index.html
@@ -101,10 +101,7 @@
         <div>
             <div class="centererWrapper">
                 <section class="titleUnderText">
-                    <p class="subTitle">Hi there! Welcome to my website! I use this website mainly to show
-                        recruiters my skills
-                        and contact information.I hope you'll enjoy your stay here. I'd give you some
-                        cookies but I respect your privacy, so maybe another time?</p>
+                    <p class="subTitle">Testt</p>
                 </section>
                 <p class="subTitleExp">About me</p>
                 <section class="project" id="bio">
